# aos-army-builder

./: .gitattributes  .gitignore  README.md  aos_db_design.md  app.db  army_roste.sqbpro  army_roster.db  army_roster.sqbpro  classDiagram.mmd  constants.py  coverage.xml  data_model.py  dice.py  main.py  pyproject.toml  sonar-project.properties  units.py
.cache/coverage/: coverage.db  coverage.xml
.cache/coverage/html/: class_index.html  function_index.html  index.html  status.json  z_9356ce0a47324b77___init___py.html  z_9356ce0a47324b77_dice_py.html  z_b5d61189d0ab8da8___init___py.html  z_b5d61189d0ab8da8_constants_py.html  z_b5d61189d0ab8da8_data_model_py.html  z_b5d61189d0ab8da8_serialization_py.html  z_b5d61189d0ab8da8_units_py.html  z_e0ce1d6ecae3dc67___init___py.html  z_e0ce1d6ecae3dc67_stopwatch_py.html
.github/workflows/: python-package.yml
sql_scripts/: ability_creation.sql  army_migration.sql  battle_profile_migration.sql  keyword_migration.sql  regiment_migration.sql  timing_migration.sql  unit_migration.sql  warscroll_migration.sql  weapon_ability_migration.sql  weapon_profile_ability_migration.sql  weapon_profile_migration.sql  weapon_type_migration.sql
src/: get_wahpedia.py  main.py  warscroll.html
src/aos_roster_tui/: app.py
src/army/: constants.py  data_model.py  db.py  models.py  serialization.py  units.py  weapon_abilities.json
src/dice/: dice.py
src/roster/: app.py
src/styles/: shared.css
src/ui/: stopwatch.py  stopwatch.tcss  wahpedia_warscroll_clanrats.html  warscroll.html
tests/: test_constants.py  test_data_model_json.py  test_model.py  test_serialization.py  test_warscroll_html.py
