[project]
name = "aos-army-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["textual[syntax]>=8.0.0"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "textual-dev>=1.8.0",
    "ty>=0.0.18",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/.venv/*",
    "*/__init__.py",
    ".gitignore",
    "*/.gitignore",
    "main.py",
]
source = ["src"]
command_line = "-m unittest discover -s src/tests -t src"
[tool.coverage.report]
# Regexes for lines to exclude from consideration
fail_under = 90
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
