[project]
name = "aos-army-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["textual[syntax]>=8.0.0"]

[dependency-groups]
dev = [
    "pyrefly>=0.57.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "textual-dev>=1.8.0",
    "ty>=0.0.18",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = """
--cov=src
--cov-report=term-missing
--cov-report=html:.cache/coverage/html
--cov-report=xml:.cache/coverage/coverage.xml
--cov-config=pyproject.toml
"""
cache_dir = ".cache/pytest"

[tool.coverage.run]
branch = true
source = ["src"]
omit = []
data_file = ".cache/coverage/coverage.db"

[tool.coverage.report]
fail_under = 70
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = ".cache/coverage/html"

[tool.ruff]
cache-dir = ".cache/ruff"
